2012-11-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/db/mysql.php, include/functions_reporting.php,
	include/ajax/agent.php: cleaned source code style.
	
	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql, pandoradb.sql,
	pandoradb.postgreSQL.sql, pandoradb.oracle.sql: added the fields
	'id_agent', 'server_name' and 'show_modulegroup' in the table
	'tnetwork_map'.
	
	* include/functions_ui.php: fixed the function
	"ui_print_agent_autocomplete_input".
	
	* include/functions_networkmap.php: added function
	"networkmap_create_module_group_node".

2012-11-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_reporting.php: cleaned source code style.
	
	* include/functions_api.php: fixed typo error that stoped the
	execution of api.

2012-11-11  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql: Fixed a typo.
	
2012-11-08  Sancho Lerena <slerena@artica.es>

	 * include/functions_config.php: Fixed a XSS in login :-O. Thanks
        to gobejishvili for reporting.

2012-11-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/events/events.php, include/functions_tags.php: cleaned
	source code style.
	
	* godmode/events/event_edit_filter.php: fixed the lost vars in
	the javascript code for the none elements in the tag select widgets.

2012-11-08  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/pChart/pData.class.php
	include/functions_reporting.php
	include/constants.php: Improve performance to the SLA 
	report items, added unknown periods and fix planned downtimes
	in SLAs. Adapt the default pchart graph engine colors to pandora

2012-11-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* index.php: cleaned source code style.
	
	* pandoradb.sql, pandoradb.postgreSQL.sql, pandoradb.oracle.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,